# cpp_gameboy

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
src/: CMakeLists.txt  gameboy.cpp
src/cartridge/: CMakeLists.txt  cartridge.cpp  cartridge.h
src/cpu/: cpu.cpp  cpu.h
src/device/: CMakeLists.txt  device.cpp  device.h  operations_handler.cpp  operations_handler.h  prefix_handler.cpp  prefix_handler.h
src/device/cpu/: cpu.cpp  cpu.h
src/device/interpreter/: interpreter.cpp  interpreter.h
src/device/logger/: logger.cpp  logger.h
src/device/memory_bus/: memory_bus.cpp  memory_bus.h
src/device/operations/: bool.cpp  bool.h  call.cpp  call.h  compare.cpp  compare.h  general.cpp  general.h  increment.cpp  increment.h  jump.cpp  jump.h  load.cpp  load.h  math.cpp  math.h  rotate.cpp  rotate.h  stack.cpp  stack.h
src/disassembler/: disassembler.cpp  disassembler.h
src/interpreter/: interpreter.cpp  interpreter.h
tests/: CMakeLists.txt  test_bool.cpp  test_compare.cpp  test_increment.cpp  test_jump.cpp  test_load.cpp  test_math.cpp  test_operations.cpp  test_stack.cpp
